ci: configure Robolectric package properties, jvmArgs repository and stacktrace in CI